I am not totally sure when I did this, but I am commiting it so that I don't have any conflicts later on.

--- a/bin/assets/infinitediamonds/lang/en_US.lang
+++ b/bin/assets/infinitediamonds/lang/en_US.lang
@@ -11,3 +11,4 @@ item.superDiamondrdiamond.name=Raw Diamond
 itemGroup.infiniteDiamondLXXXII=InfiDiamonds LXXXII: Non-OP Edition
 tile.SuperDiamondBlock.name=Super Diamond Block
 item.tesseract.name=Tesseract
+death.attack.InstantSuffocation=Somebody has been killed by instant suffication by a 81/1 compressed block.
