--- a/src/main/java/assets/infinitediamonds/lang/en_US.lang
+++ b/src/main/java/assets/infinitediamonds/lang/en_US.lang
@@ -11,3 +11,4 @@ item.superDiamondrdiamond.name=Raw Diamond
 itemGroup.infiniteDiamondLXXXII=InfiDiamonds LXXXII: Non-OP Edition
 tile.SuperDiamondBlock.name=Super Diamond Block
 item.tesseract.name=Tesseract
+death.attack.InstantSuffocation=Somebody has been killed by instant suffication by a 81/1 compressed block.
